force-app/main/default/objects/BoardEx__Exception_Log_Detail__c/BoardEx__Exception_Log_Detail__c.object-meta.xml
<CustomObject>
    <label>Exception Log Detail</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Exception Log Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception Log Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>