force-app/main/default/objects/BoardEx__Exception_Log_Detail__c/fields/BoardEx__DML_Failed_Row_Number__c.field-meta.xml
<CustomField>
    <fullName>BoardEx__DML_Failed_Row_Number__c</fullName>
    <label>DML Failed Row Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>