force-app/main/default/objects/BoardEx__Exception_Log_Detail__c/fields/BoardEx__DML_Field_Names__c.field-meta.xml
<CustomField>
    <fullName>BoardEx__DML_Field_Names__c</fullName>
    <label>DML Field Names</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>