force-app/main/default/objects/BoardEx__Exception_Log_Detail__c/fields/BoardEx__DML_ID__c.field-meta.xml
<CustomField>
    <fullName>BoardEx__DML_ID__c</fullName>
    <label>DML ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>