force-app/main/default/objects/BoardEx__Exception_Log_Detail__c/fields/BoardEx__DML_Index__c.field-meta.xml
<CustomField>
    <fullName>BoardEx__DML_Index__c</fullName>
    <label>DML Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>