force-app/main/default/objects/BoardEx__Exception_Log_Detail__c/fields/BoardEx__DML_Type__c.field-meta.xml
<CustomField>
    <fullName>BoardEx__DML_Type__c</fullName>
    <label>DML Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>