force-app/main/default/objects/BoardEx__Exception_Log_Detail__c/fields/BoardEx__Exception_Log__c.field-meta.xml
<CustomField>
    <fullName>BoardEx__Exception_Log__c</fullName>
    <label>Exception Log</label>
    <referenceTo>BoardEx__Exception_Log__c</referenceTo>
    <relationshipLabel>Exception Log Details</relationshipLabel>
    <relationshipName>Exception_Log_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>